build: Fix cast align warning for clang

https://bugzilla.gnome.org/show_bug.cgi?id=753435